# GridPuzzle

./: .gitignore  Dockerfile  README.md  pyproject.toml  settings-example.json
src/: GridPuzzle.py  version.json
src/blueprints/: General.py
src/logic/: Constants.py  events.py  levels.py  model.py
src/static/css/: gridPuzzle.css
src/static/js/: common.js  gridPuzzle.js  levelSelect.js
src/templates/: gridPuzzle.jinja2  gridPuzzleLevelSelect.jinja2  gridPuzzleMacros.jinja2  index.html
