[tool.poetry]
name = "GridPuzzle"
version = "1.10.0"
description = "Grid puzzle game inspired by The Witness."
authors = ["deadlocker8"]

[[tool.poetry.source]]
name = "TheCodeLabs"
url = "https://pypi.thecodelabs.de"
priority = "explicit"

[tool.poetry.dependencies]
python = "^3.11"
thecodelabs-baseutils = {version = "*", source = "TheCodeLabs" }
thecodelabs-flaskutils = {version = "*", source = "TheCodeLabs" }
flask = "3.0.3"
Flask-SocketIO = "5.3.7"
gevent = "24.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
